# lljs-vm-rust

./: Cargo.toml
vm/: Cargo.toml
vm-assembler/: Cargo.toml
vm-assembler/src/: assembler.rs  lib.rs
vm-assembler/src/parser/: arguments.rs  combinators.rs  instructions.rs  mod.rs
vm-assembler/tests/: assembly1.asm  assembly2.asm  parser.rs
vm-bin/: Cargo.toml
vm-bin/src/: main.rs
vm/benches/: bench.rs
vm/examples/: hello.rs
vm/src/: cpu.rs  instructions.rs  lib.rs  memory.rs  registers.rs  screen_device.rs
vm/tests/: binary1  binary2
