[package]
name = "vm-bin"
version = "0.1.0"
authors = ["Ezra Celli <ezra@onerockwell.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse_int = "0.4.0"
structopt = { version = "0.3.15", default-features = false }
vm = { path = "../vm" }
vm-assembler = { path = "../vm-assembler" }
