[package]
name = "vm"
version = "0.1.0"
authors = ["Ezra Celli <ezra@onerockwell.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "bench"
harness = false

[dependencies]

[dev-dependencies]
criterion = "0.3.2"
hex-slice = "0.1.4"
